<resources>
    <string name="app_name">GitHub Users</string>

<!--    SearchFragment-->
    <string name="txt_dialog_information">GitHub users will show up after using\nSearch Person Menu</string>
    <string name="txt_search_progress">Please wait! Looking For</string>
    <string name="txt_type_the_username">Type the Username</string>

    <string name="content_img_search_icon">Image Icon Search Person For Clue Using App</string>

<!--    DetailActivity-->
    <string name="txt_title_detail">Detail GitHub User</string>
    <string name="txt_repositories">Repositories</string>
    <string name="txt_followers">Followers</string>
    <string name="txt_following">Following</string>
    <string name="txt_share">Share</string>
    <string name="txt_share_to">Share GitHub User Profile to …</string>

    <string name="content_img_company">Image For Icon Company</string>
    <string name="content_img_location">Image For Icon Location</string>
    <string name="content_img_repositories">Image For Icon Repositories</string>
    <string name="content_img_follow">Image For Icon Followers And Following</string>
    <string name="content_btn_favorite">Button Favorite</string>

<!--    Menu-->
    <string name="txt_search">Search</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_favorite">txt_Favorite</string>

<!--    Navigation-->
    <string name="txt_favorite_users">Favorite Users</string>
    <string name="txt_github_users_app">GitHub Users App</string>

</resources>
